--- a/.travis.yml
+++ b/.travis.yml
@@ -1,39 +1,45 @@
-dist: trusty
 language: php
+dist: xenial
 
 matrix:
-  include:
-    - php: 5.5
-      env: DB=mysqli
-    - php: 5.5
-      env: DB=mariadb
-    - php: 5.5
-      env: DB=postgres
-    - php: 5.5
-      env: DB=sqlite3
-    - php: 5.6
-      env: DB=mysqli
-    - php: 7.0
-      env: DB=mysqli
-    - php: 7.1
-      env: DB=mysqli
-    - php: 7.2
-      env: DB=mysqli
-  fast_finish: true
+    include:
+        - php: 7.1
+          env: DB=mariadb
+        - php: 7.1
+          env: DB=postgres
+        - php: 7.1
+          env: DB=sqlite3
+        - php: 7.1
+          env: DB=mysqli # MyISAM
+        - php: 7.2
+          env: DB=mysqli
+        - php: 7.3
+          env: DB=mysqli
+        - php: 7.4snapshot
+          env: DB=mysqli
+        - php: nightly
+          env: DB=mysqli
+    allow_failures:
+        - php: nightly
+    fast_finish: true
 
 env:
-  global:
-    - EXTNAME="dmzx/Ultimate-Points-Extension-3.2.x"  # CHANGE name of the extension HERE
-    - SNIFF="1"            # Should we run code sniffer on your code?
-    - IMAGE_ICC="1"        # Should we run icc profile sniffer on your images?
-    - EPV="1"              # Should we run EPV (Extension Pre Validator) on your code?
-    - PHPBB_BRANCH="3.2.x"
+    global:
+        - EXTNAME="dmzx/Ultimate-Points-Extension-3.2.x"
+        - SNIFF="1"                       # Should we run code sniffer on your code?
+        - IMAGE_ICC="1"                   # Should we run icc profile sniffer on your images?
+        - EPV="1"                         # Should we run EPV (Extension Pre Validator) on your code?
+        - PHPBB_BRANCH="3.3.x"
 
 branches:
   only:
     - master
     - dev
     - /^\d+(\.\d+)?\.x$/
+
+services:
+  - postgresql
+  - mysql
 
 before_install:
   - sudo mkdir travis
@@ -43,14 +49,14 @@ before_install:
   - sudo rm -rf phpbb-ext-acme-demo
 
 install:
-  - composer install --dev --no-interaction --prefer-source
+  - composer install --no-interaction --prefer-source
   - travis/prepare-phpbb.sh $EXTNAME $PHPBB_BRANCH
   - cd ../../phpBB3
   - travis/prepare-extension.sh $EXTNAME $PHPBB_BRANCH
-  - travis/setup-phpbb.sh $DB $TRAVIS_PHP_VERSION
+  - travis/setup-phpbb.sh $DB $TRAVIS_PHP_VERSION $NOTESTS
 
 before_script:
-  - travis/setup-database.sh $DB $TRAVIS_PHP_VERSION
+  - travis/setup-database.sh $DB $TRAVIS_PHP_VERSION $NOTESTS
 
 script:
   - sh -c "if [ '$SNIFF' != '0' ]; then travis/ext-sniff.sh $DB $TRAVIS_PHP_VERSION $EXTNAME; fi"
